--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://keleyundou.github.io #这里改为你网站的域名
+url: http://keleyundou.github.io
 title: 冰点的技术博客 #网站标题
 subtitle: 顽强的毅力可以征服世界上任何一座高峰。 #博客副标题
 author: 冰点 #博客作者的名字
